skins/elastic/styles/widgets/lists.less
/* ... */
html.ie11 .listing.iconized li a:before {
    font-size: 1.25rem;
}

.listing.iconized tr {
    td:before {
        &:extend(.font-icon-class);
        margin-right: .5rem;
    }
    &.contact.person td.name:before {
        content: @fa-var-user;
    }
    &.contact.group td.name:before {
        content: @fa-var-users;
    }
    &.general > td.section:before {
        content: @fa-var-desktop;
    }
    &.mailbox > td.section:before {
        .font-icon-regular(@fa-var-envelope);
    }
    &.mailview > td.section:before {
        content: @fa-var-inbox;
    }
    &.compose > td.section:before {
        content: @fa-var-paper-plane;
    }
    &.addressbook > td.section:before {
        content: @fa-var-user;
    }
    &.folders > td.section:before {
        .font-icon-regular(@fa-var-folder);
    }
    &.server > td.section:before {
        content: @fa-var-server;
    }
    &.enigma > td.section:before {
        content: @fa-var-lock;
    }
    &.calendar > td.section:before {
        content: @fa-var-calendar;
    }
}

/* selecatable list: e.g. spellcheck language selection */
.listing.iconized.selectable li {
    a:before {
        &:extend(.font-icon-class);
        content: "";
    }
    a.selected:before {
        content: @fa-var-check;
    }
}

.popupmenu .listing {
    li > a {
        border-left: 0;
    }

    li.selected {
        color: @color-toolbarmenu-hover;
        background-color: @color-toolbarmenu-hover-background;
    }

    td {
        .overflow-ellipsis;
    }
}

@treelist-treetoggle-width: 1.5em;
ul.treelist {
    li {
        div.treetoggle {
            position: absolute;
            top: 0;
            left: 0;
            width: @treelist-treetoggle-width;
            cursor: pointer;

            &:before {
                &:extend(.font-icon-class);
                content: @fa-var-angle-right;
                width: (@treelist-treetoggle-width - .3em);
            }

            &.expanded:before {
                content: @fa-var-angle-down;
            }
        }

        & > a {
            .overflow-ellipsis;
            padding-left: @treelist-treetoggle-width;
        }

        &.selected {
            // reset .listing selection style
            color: inherit;
            background-color: transparent;

            & > div > a, // this is used e.g. by kolab_addressbook
            & > a {
                color: @color-list-selected;
                background-color: @color-list-selected-background;
            }
        }

        ul {
            padding: 0;

            li {
                padding-left: 0;
                a { padding-left: (2 * @treelist-treetoggle-width); }
                div.treetoggle { left: @treelist-treetoggle-width; }

                li {
                    a { padding-left: (3 * @treelist-treetoggle-width); }
                    div.treetoggle { left: (2 * @treelist-treetoggle-width); }

                    li {
                        a { padding-left: (4 * @treelist-treetoggle-width); }
                        div.treetoggle { left: (3 * @treelist-treetoggle-width); }

                        li {
                            a { padding-left: (5 * @treelist-treetoggle-width); }
                            div.treetoggle { left: (4 * @treelist-treetoggle-width); }

                            li {
                                a { padding-left: (6 * @treelist-treetoggle-width); }
                                div.treetoggle { left: (5 * @treelist-treetoggle-width); }
                            }
                        }
                    }
                }
            }
        }
    }

    &.notree {
        div.treetoggle {
            display: none;
        }

        li > a {
            padding-left: .5em;
        }
    }
}
/* ... */

